Update YouTube video title in bookmark

--- a/src/content/bookmark/2025-11-02--youtube.md
+++ b/src/content/bookmark/2025-11-02--youtube.md
@@ -1,5 +1,5 @@
 ---
-title: "- YouTube"
+title: "The Problem with this Humanoid Robot - YouTube"
 url: "https://www.youtube.com/watch?v=j31dmodZ-5c"
 excerpt: "Enjoy the videos and music you love, upload original content, and share it all with friends, family, and the world on YouTube."
 readDate: "2025-11-02T05:43:18.110Z"
